@@ -243,7 +243,7 @@ void Preferences::reset() {
 
 	use_pausing_keep_force = true;
 
-	use_correct_pts = false;
+	use_correct_pts = Disabled;
 
 	actions_to_run = "";
 
@@ -602,7 +602,7 @@ void Preferences::save() {
 
 	set->setValue("use_pausing_keep_force", use_pausing_keep_force);
 
-	set->setValue("use_correct_pts", use_correct_pts);
+	set->setValue("correct_pts", use_correct_pts);
 
 	set->setValue("actions_to_run", actions_to_run);
 
@@ -979,7 +979,7 @@ void Preferences::load() {
 
 	use_pausing_keep_force = set->value("use_pausing_keep_force", use_pausing_keep_force).toBool();
 
-	use_correct_pts = set->value("use_correct_pts", use_correct_pts).toBool();
+	use_correct_pts = (OptionState) set->value("correct_pts", use_correct_pts).toInt();
 
 	actions_to_run = set->value("actions_to_run", actions_to_run).toString();
 
